# AstraRaccoons

./: .gitignore  CMakeLists.txt  README.md
headers/: Game.hpp  Starter.hpp  Starter.hpp-e
headers/base/: BaseProject.hpp  Pipeline.hpp  Texture.hpp
headers/graphics/: GraphicsPipeline.hpp  ModelComponent.hpp
headers/objects/: FaderPlaneObject.hpp  GameObject.hpp  MaterialTestPlane.hpp  MaterialTestSphere.hpp  Pew.hpp  Score.hpp  SkyBoxObject.hpp  SpaceshipObject.hpp  TestCubeObject.hpp  TextMaker.hpp  Transform.hpp
headers/scenes/: AvailableScenes.hpp  GameOverScene.hpp  IntroScene.hpp  MainScene.hpp  Scene.hpp  TestScene.hpp
models/: Crystal.gltf  Crystal0.gltf  Hoshi.gltf  Kokoro.gltf  Pietrone.gltf  asteroid.gltf  dish.005_Mesh.098.mgcg  myasteroid.gltf
shaders/: FaderShader.frag  FaderShader.vert  Pew.frag  Pew.vert  PhongShader.frag  PhongShader.vert  PhongShaderFrag.spv  PhongShaderVert.spv  Shader.frag  Shader.vert  ShaderFrag.spv  Shader_Frag.spv  Shader_Vert.spv  ShipShader.frag  ShipShader.vert  ShipShader_Frag.spv  ShipShader_Vert.spv  SkyBox.frag  SkyBox.vert  SkyBox_Vert.spv  Text.frag  Text.vert  library.glsl
shaders/asteroids/: BaseAsteroid.vert  KillerPietrino.frag  KillerPietrino.vert  Pietrino.frag  Pietro.frag  Pietrone.frag  SimpleAsteroidShader.frag  SpecialPietrino.frag
src/: Game.cpp  main.cpp
src/base/: BaseProject.cpp  Common.cpp  DescriptorSets.cpp  Pipeline.cpp  Texture.cpp  VertexDescriptors.cpp
src/objects/: FaderPlaneObject.cpp  GameObject.cpp  MaterialTestPlane.cpp  MaterialTestSphere.cpp  Pew.cpp  Score.cpp  TextMaker.cpp  (+4 more)
(+71 files in other folders)
